--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cssnano": "^4.1.10",
     "live-server": "^1.2.1",
     "postcss-cli": "^6.1.3",
+    "postcss-import": "^12.0.1",
     "tailwindcss": "^1.0.5",
     "webpack": "^4.36.1"
   },
@@ -18,9 +19,9 @@
     "postcss-loader": "^3.0.0"
   },
   "scripts": {
-    "serve": "cross-env NODE_ENV=development concurrently \"postcss src/css/tailwind.css -o src/build/tailwind.css --watch\"  \"live-server ./src\"",
-    "development": "cross-env NODE_ENV=development postcss src/css/tailwind.css -o src/build/tailwind.css",
-    "production": "cross-env NODE_ENV=production postcss src/css/tailwind.css -o src/build/tailwind.css"
+    "serve": "cross-env NODE_ENV=development concurrently \"postcss src/css/tailwind.css -o src/build/tailwind.css --watch\" \"postcss src/css/custom.css -o src/build/custom.css --watch\"  \"live-server ./src\"",
+    "development": "cross-env NODE_ENV=development postcss \"postcss src/css/tailwind.css -o src/build/tailwind.css\" \"postcss src/css/custom.css -o src/build/custom.css\"",
+    "production": "cross-env NODE_ENV=production \"postcss src/css/tailwind.css -o src/build/tailwind.css\" \"postcss src/css/custom.css -o src/build/custom.css\""
   },
   "author": "",
   "license": "ISC"
